infra/k8s/fluent-bit.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: fluent-bit

spec:

  selector:
    matchLabels:
      app: fluent-bit


  template:

    metadata:
      labels:
        app: fluent-bit


    spec:

      containers:

      - name: fluent-bit

        image: fluent/fluent-bit:3.0


        ports:
        - containerPort: 24224


        volumeMounts:

        - name: varlog
          mountPath: /var/log

        - name: containers
          mountPath: /var/lib/docker/containers
          readOnly: true


      volumes:

      - name: varlog
        hostPath:
          path: /var/log


      - name: containers
        hostPath:
          path: /var/lib/docker/containers
