infra/k8s/kafka-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kafka-ui
  namespace: devops-agent

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka-ui

  template:
    metadata:
      labels:
        app: kafka-ui

    spec:
      containers:
      - name: kafka-ui

        image: provectuslabs/kafka-ui:latest

        ports:
        - containerPort: 8080
