infra/k8s/cadvisor-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cadvisor
  namespace: devops-agent

spec:
  type: ClusterIP

  selector:
    app: cadvisor

  ports:
    - port: 8080
      targetPort: 8080
