infra/k8s/kafka-ui-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kafka-ui
  namespace: devops-agent

spec:
  selector:
    app: kafka-ui

  ports:
  - port: 8080
    targetPort: 8080

  type: ClusterIP
