infra/k8s/mongo-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: devops-agent

spec:
  selector:
    app: mongodb

  ports:
  - port: 27017
