infra/k8s/mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: devops-agent

spec:
  type: ClusterIP

  selector:
    app: mongodb

  ports:
  - port: 27017
    targetPort: 27017
