infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-ingress
  namespace: devops-agent

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090

      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8080

      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000

      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
